erDiagram
    StorageCabinet {
        string CabinetID PK
        string BuildingID
        string Status
        string Remark 
    }
    Student {
        string StudentID PK
        string Name
        string Gender
        string BuildingID FK
        string RoomID FK
        string BedID
        boolean IsDormLeader
    }
    ItemStorage {
        string ItemID PK
        string StudentID FK
        string ItemName
        string ItemType
        string CabinetID FK
        string Status
        datetime DepositTime
        datetime PickupTime
    }
    Dormitory {
        string RoomID PK
        string BuildingID PK
        int Floor
        int StudentCount
    }

    RepairOrder {
        string RepairID PK
        string BuildingID FK
        string RoomID FK
        string RepairType
        string RepairContent
        datetime RepairTime
        string RepairPerson
        decimal RepairCost
        string RepairStatus
    }

    UtilityBill {
        string BillID PK
        string BuildingID FK
        string RoomID FK
        string BillMonth
        decimal TotalFee
        string PaymentStatus
        datetime PaymentTime
    }

    HealthEvaluation {
        string EvaluationID PK
        string BuildingID FK
        string RoomID FK
        date EvaluationDate
        int EvaluationScore
    }
    AccessRecord {
        string RecordID PK
        string VisitorName
        string VisitorPhone
        string BuildingID FK
        string RoomID FK
        string AccessType
        datetime AccessTime
        string Purpose
    }
    StorageCabinet ||--o{ ItemStorage : 存储
    Dormitory ||--o{ AccessRecord : 访问
    Student ||--o{ ItemStorage : 存储
    Dormitory ||--o{ RepairOrder : 提交
    Dormitory ||--o{ Student : "居住"
    Dormitory ||--o{ UtilityBill : "产生"
    Dormitory ||--o{ HealthEvaluation : "产生"